# oop_forest

./: CMakeLists.txt  LICENSE  README.md  main.cpp  rabbit.cpp
.github/workflows/: cmake.yml
headers/: animal.h  animals_lib.h  bear.h  beaver.h  forest.h  fox.h  herbivore.h  horse.h  human.h  predator.h  rabbit.h  squirrel.h  wolf.h
source/: animal.cpp  bear.cpp  beaver.cpp  forest.cpp  fox.cpp  herbivore.cpp  horse.cpp  human.cpp  predator.cpp  rabbit.cpp  squirrel.cpp  wolf.cpp
